fix: fixed breadcrumbs bottom margin on smaller screens

--- a/styles/custom-css/contact.css
+++ b/styles/custom-css/contact.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Gelion, sans-serif;
@@ -19,8 +18,7 @@ header.nav {
   margin: 0;
   padding: 1rem 0px;
   background-color: #fff;
-  -webkit-box-shadow: 0px 3px 4px rgba(196, 196, 196, 0.25);
-          box-shadow: 0px 3px 4px rgba(196, 196, 196, 0.25);
+  box-shadow: 0px 3px 4px rgba(196, 196, 196, 0.25);
 }
 
 header.nav .container {
@@ -30,20 +28,12 @@ header.nav .container {
 
 header.nav .container ul {
   margin-top: 1rem;
-  height: -webkit-max-content;
-  height: -moz-max-content;
   height: max-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 header.nav .container ul li {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 100%;
 }
@@ -108,10 +98,8 @@ header.nav .container ul li:last-of-type a {
   overflow: hidden;
   left: 0%;
   top: 0;
-  -webkit-transform: translate(0, -40%);
-          transform: translate(0, -40%);
-  -o-object-fit: contain;
-     object-fit: contain;
+  transform: translate(0, -40%);
+  object-fit: contain;
 }
 
 .contact > .container > nav {
@@ -142,8 +130,7 @@ header.nav .container ul li:last-of-type a {
   font-weight: normal;
   font-size: 24px;
   line-height: 29px;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
   color: #807784;
 }
 
@@ -158,13 +145,8 @@ header.nav .container ul li:last-of-type a {
 
 .contact > .container > .row div form {
   max-width: 386px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .contact > .container > .row div form .form-control {
@@ -222,8 +204,6 @@ header.nav .container ul li:last-of-type a {
 }
 
 .contact > .container > .row div:nth-of-type(2) p span {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
   margin-right: 3rem;
   width: 3.5rem;
@@ -240,8 +220,7 @@ header.nav .container ul li:last-of-type a {
 
 .contact #map {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 50vh;
   max-height: 425px;
 }
@@ -290,8 +269,6 @@ footer div.container:first-of-type li:not(:first-of-type) {
 
 footer div.container:first-of-type form {
   max-width: 393px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 0;
   height: 3.5rem;
@@ -311,18 +288,6 @@ footer div.container:first-of-type form input.form-control {
   padding-left: 1.5rem;
 }
 
-footer div.container:first-of-type form input.form-control::-webkit-input-placeholder {
-  color: #ffffff70;
-}
-
-footer div.container:first-of-type form input.form-control:-ms-input-placeholder {
-  color: #ffffff70;
-}
-
-footer div.container:first-of-type form input.form-control::-ms-input-placeholder {
-  color: #ffffff70;
-}
-
 footer div.container:first-of-type form input.form-control::placeholder {
   color: #ffffff70;
 }
@@ -340,18 +305,13 @@ footer div.container:first-of-type form button {
   padding: 1rem 37px 1rem 27px;
   color: #ffffff70;
   height: 100%;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: -webkit-transform 0.3s ease-in-out;
-  transition: -webkit-transform 0.3s ease-in-out;
+  transform: scale(1);
   transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
 }
 
 footer div.container:first-of-type form button:hover {
   background-color: #5889bd;
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 footer div.container:first-of-type form button:active,
@@ -370,15 +330,9 @@ footer hr {
 
 footer .container:last-of-type {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 footer .container:last-of-type small {
@@ -395,11 +349,7 @@ footer .container:last-of-type small a {
 }
 
 footer .container:last-of-type .links {
-  width: -webkit-max-content;
-  width: -moz-max-content;
   width: max-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -409,15 +359,9 @@ footer .container:last-of-type .links a {
   border-radius: 50%;
   height: 40px;
   width: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin-right: 1.5rem;
 }
 
@@ -449,13 +393,8 @@ footer .container:last-of-type .links a {
     padding-right: 1rem;
   }
   footer .container .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   footer .container .row > div.col-6 {
     padding: 0;
@@ -468,7 +407,7 @@ footer .container:last-of-type .links a {
     padding-left: 64px;
     padding-right: 30px;
   }
-  .contact > nav {
+  .contact .container > nav {
     margin-bottom: 30px;
   }
 }
